# cedar

./: Cargo.toml
cedar-policy/: Cargo.toml
cedar-policy-bindings/: ActionEntityUID.ts  ActionType.ts  ApplySpec.ts  AttributesOrContext.ts  AuthorizationAnswer.ts  AuthorizationCall.ts  CedarValueJson.ts  Decision.ts  EntityJson.ts  EntityType.ts  EntityUIDStrings.ts  EntityUidJson.ts  FnAndArg.ts  InterfaceDiagnostics.ts  InterfaceResponse.ts  Link.ts  NamespaceDefinition.ts  NestedSchemaTypeVariant.ts  PolicyID.ts  PolicyId.ts  PolicySpecification.ts  RecvdSlice.ts  SchemaFragment.ts  SchemaType.ts  SchemaTypeVariant.ts  TemplateLink.ts  TypeAndId.ts  TypeOfAttribute.ts
cedar-policy-core/: Cargo.toml
cedar-policy-core/src/: authorizer.rs
cedar-policy-core/src/ast/: policy.rs
cedar-policy-core/src/entities/json/: entities.rs  value.rs
cedar-policy-json-schemas/: AuthorizationAnswer.json  AuthorizationCall.json
cedar-policy-validator/: Cargo.toml
cedar-policy-validator/src/: schema_file_format.rs
cedar-policy/src/: api.rs
cedar-policy/src/frontend/: is_authorized.rs  utils.rs
