[workspace]
members = [
	"cedar-policy",
	"cedar-policy-core",
	"cedar-policy-validator",
	"cedar-policy-formatter",
	"cedar-policy-cli",
]
resolver = "2"

[patch.crates-io]
ts-rs = { path = "../ts-rs/ts-rs" }

# Enable global integer overflow detection for the release profile
[profile.release]
overflow-checks = true
